refactor: 리뷰마다 방문 여부를 포함하지 않고, 방문 여부를 리스트에 빼서 한번만 응답